--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Monopoly money manager",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.13.0"
+    "express": "^4.13.0",
+    "nodemon": "^1.10.2"
   },
   "devDependencies": {},
   "scripts": {
